--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Nastavitve</string>
     <string name="action_sort">Uredi</string>
     <string name="action_share">Deli</string>
+    <string name="action_odjava">Odjava</string>
     <string name="title_activity_settings">Settings</string>
     <string name="add_new_location_no_location">Za dodajanje mora biti pridobljena lokacija. Preverite pravice!</string>
     <string name="permission_must_title">Dodeljevanje pravic</string>
